// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > Snapshots > matches snapshot with all slots 1`] = `
<header
  class="flex items-center gap-md border-b border-border bg-surface transition-all duration-200 ease-out static px-lg py-md"
>
  <div
    class="shrink-0 flex items-center"
  >
    <button>
      ☰
    </button>
  </div>
  <div
    class="shrink-0 flex items-center"
  >
    AppIQ
  </div>
  <div
    class="flex-1 flex items-center justify-start"
  >
    <a
      href="/"
    >
      Dashboard
    </a>
  </div>
   
  <div
    class="shrink-0 flex items-center gap-md"
  >
    <button>
      Profile
    </button>
  </div>
</header>
`;

exports[`Navbar > Snapshots > matches snapshot with default props 1`] = `
<header
  class="flex items-center gap-md border-b border-border bg-surface transition-all duration-200 ease-out static px-lg py-md"
>
  <div
    class="flex-1"
  />
   
</header>
`;

exports[`Navbar > Snapshots > matches snapshot with menuPosition='right' 1`] = `
<header
  class="flex items-center gap-md border-b border-border bg-surface transition-all duration-200 ease-out static px-lg py-md"
>
  <div
    class="shrink-0 flex items-center"
  >
    <button>
      ☰
    </button>
  </div>
  <div
    class="shrink-0 flex items-center"
  >
    AppIQ
  </div>
  <div
    class="flex-1 flex items-center justify-end"
  >
    <a
      href="/"
    >
      Dashboard
    </a>
  </div>
   
  <div
    class="shrink-0 flex items-center gap-md"
  >
    <button>
      Profile
    </button>
  </div>
</header>
`;

exports[`Navbar > Snapshots > matches snapshot with size and position variants 1`] = `
<header
  class="flex items-center gap-md border-b border-border bg-surface transition-all duration-200 ease-out sticky top-0 left-0 right-0 z-40 w-full px-2xl py-lg"
>
  <div
    class="shrink-0 flex items-center"
  >
    Test
  </div>
  <div
    class="flex-1"
  />
   
</header>
`;
